feat(EIDOMNI-829): implement static compliance checks for OpenID Client Metadata and Request Object endpoints
